--- a/SocialNetwork.Api/appsettings.json
+++ b/SocialNetwork.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ExampleDatabase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
