--- a/SocialNetwork.Api/appsettings.json
+++ b/SocialNetwork.Api/appsettings.json
@@ -10,5 +10,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "2af4ff57-4ca0-4b3a-804b-178ad27aaf88",
+    "Issuer": "https://localhost:44350/",
+    "Audience": "https://localhost:3000/",
+    "Time": 120
+  }
 }
