added Neo4J Repository to FollowerService

--- a/SocialNetwork.Api/SocialNetwork.Api.csproj
+++ b/SocialNetwork.Api/SocialNetwork.Api.csproj
@@ -20,5 +20,9 @@
     <Folder Include="Data\Services\Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetwork.DataAccess.Neo4J\SocialNetwork.DataAccess.Neo4J.csproj" />
+  </ItemGroup>
+
 
 </Project>
