--- a/SocialNetwork.DataAccess.Neo4J/SocialNetwork.DataAccess.Neo4J.csproj
+++ b/SocialNetwork.DataAccess.Neo4J/SocialNetwork.DataAccess.Neo4J.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Neo4j.Driver" Version="4.0.0" />
     <PackageReference Include="Neo4jClient" Version="4.0.0" />
   </ItemGroup>
 
